welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	def PositionFinale():Boolean{
		var x=false
		if (estFaceMur && getDirection==Direction.est) x=true
		return x
	}
	baisseBrosse
	while (!PositionFinale){
		avance
		if (estFaceMur) {
			gauche
			avance
			droite
			recule(6)
		}
	}
}
